<resources>
    <string name="app_name">Task Keeper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_today">Today</string>
    <string name="title_week">Week</string>
    <string name="title_maintasks">Tasks</string>
    <string name="title_archivetasks">Archive</string>
    <string name="title_routines">Routines</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="null_category">Untagged</string>
    <string name="action_settings">Settings</string>
    <string name="prune_tasks">Prune Tasks</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="new_category">Enter new category</string>
    <string name="add">add</string>
    <string name="done">done</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="tab">Tab</string>
    <string name="category">Category</string>
    <string name="task_name">Task Name</string>
    <string name="new_task">Enter a new task</string>
    <string name="priority">Priority</string>
    <string name="high_priority">Urgent</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>
    <string name="null_priority">On Hold</string>
</resources>