<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_today"
        android:icon="@drawable/ic_outline_today_24"
        android:title="@string/title_today" />
    <item
        android:id="@+id/navigation_week"
        android:icon="@drawable/ic_outline_view_week_24"
        android:title="@string/title_week" />
    <item
        android:id="@+id/navigation_maintasks"
        android:icon="@drawable/ic_outline_assignment_24"
        android:title="@string/title_maintasks" />
    <item
        android:id="@+id/navigation_archivetasks"
        android:icon="@drawable/ic_outline_archive_24"
        android:title="@string/title_archivetasks" />
    <item
        android:id="@+id/navigation_routines"
        android:icon="@drawable/ic_outline_update_24"
        android:title="@string/title_routines" />

</menu>